[project]
name = "genetica_lgorithm"
version = "1.0.0"
description = "Un programa que realiza una optimiazción en el problema onemax, usando un algoritmo genético"
readme = "README.md"
authors = [{ name = "IkarosKurtz", email = "qwertypopsdown@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
