[project]
name = "multiobjective_problem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "IkarosKurtz", email = "qwertypopsdown@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["pymoo>=0.6.1.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
